--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ls-advanced-boilerplate",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -53,6 +53,7 @@
   ],
   "dependencies": {
     "axios": "^0.19.0",
+    "flickity": "^2.2.1",
     "normalize.css": "^8.0.1",
     "promptly": "^3.0.3",
     "pug": "^2.0.3",
@@ -61,6 +62,7 @@
     "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.7",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-flickity": "^1.2.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vuelidate": "^0.7.4",
