--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "webpack-dev-server --mode=development --hot",
     "build": "webpack --mode=production --progress",
     "reg": "node reg-util.js",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
+    "gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
