--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14.6.1'  # Use whatever node version your project requires
+          node-version: '20.9.0'  # Use whatever node version your project requires
 
       - name: Install Dependencies
         run: yarn install
@@ -23,6 +23,6 @@ jobs:
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@v4.4.3
         with:
-          branch: master # The branch the action should deploy to.
+          branch: gh-pages # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
           # You can specify additional configuration here as needed.
